--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "nuxt": "^2.13.0"
   },
   "devDependencies": {
-    "@nuxt/typescript-build": "^1.0.3"
+    "@nuxt/typescript-build": "^1.0.3",
+    "@nuxtjs/vuetify": "^1.11.2"
   }
 }
