--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.4.10",
-    "nuxt": "^2.13.0"
+    "nuxt": "^2.13.0",
+    "swiper": "5.4.5",
+    "vue-awesome-swiper": "^3.1.3"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^1.0.3",
