--- a/app/package.json
+++ b/app/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.4.10",
+    "@nuxtjs/dotenv": "^1.4.1",
+    "core-js": "2.6.9",
+    "firebase": "^7.19.1",
     "nuxt": "^2.13.0",
+    "save": "^2.4.0",
     "swiper": "5.4.5",
+    "vee-validate": "^3.3.9",
     "vue-awesome-swiper": "^3.1.3"
   },
   "devDependencies": {
